<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="@dimen/_16dp"
    app:cardElevation="5dp">

    <TextView
        android:id="@+id/tvTitleDzikirHarian"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/title"
        android:textSize="@dimen/_24sp"
        android:textColor="@color/black"
        android:layout_centerHorizontal="true"/>


        <TextView
            android:id="@+id/tvLafazItemDoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_lafaz"
            android:textSize="@dimen/_24sp"
            android:textColor="@color/black"
            android:fontFamily="@font/arabic_arihna"
            android:textStyle="bold"
            android:layout_below="@id/tvTitleDzikirHarian"
            android:layout_marginTop="@dimen/_16dp"
            android:layout_alignParentEnd="true"/>

        <TextView
            android:id="@+id/tvTerjemahItemDoa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txt_terjemah"
            android:textSize="@dimen/_15sp"
            android:layout_below="@id/tvLafazItemDoa"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/_16dp"/>

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:src="@drawable/line"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_below="@id/tvTerjemahItemDoa"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>